--- a/options/index.html
+++ b/options/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1 id="myHeading">My content</h1>
+    <label for="input">Input: </label><input id="input" type="text">
     <script src="script.js"></script>
   </body>
 </html>
